<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/top_view"
        android:background="@drawable/iwave"/>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/wave"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary"
            android:layout_marginHorizontal="32dp">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/colorPrimary"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_login_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_as"
                android:textSize="18sp"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="32dp"/>
            <RadioGroup
                android:id="@+id/group_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"/>
                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/teacher"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            style="@style/CustomButton"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="32dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/text_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:gravity="end"
                android:text="@string/createAccount"/>

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/register"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>