<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.profile.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:elevation="1dp"
            android:background="@drawable/button_custom"
            android:backgroundTint="@color/colorBtnBack"
            android:foreground="@drawable/ic_back"/>
        
        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/iwave"
            android:layout_below="@id/top_view"/>
        
        <TextView
            android:id="@+id/text_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="32dp"
            android:text="@string/edit_profile"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_edit_profile"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nama"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@id/name_textInput_layout"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_textInput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginEnd="8dp"
                app:startIconDrawable="@drawable/ic_call"
                app:startIconTint="@color/colorPrimary"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtText_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:ems="10"
                    android:inputType="phone"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_textInput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginStart="8dp"
                android:enabled="false"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtText_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/birth_date"
                    android:ems="10"
                    android:inputType="date"
                    tools:ignore="Autofill"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_inputDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:background="@drawable/ic_date_range"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/grade_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_graduate"
            app:startIconTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/grade"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            tools:ignore="DisableBaselineAlignment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/education_textInput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:layout_marginEnd="8dp"
                app:startIconDrawable="@drawable/ic_graduate"
                app:startIconTint="@color/colorPrimary"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edttext_education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/education"
                    android:ems="10"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gpa_textInput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:layout_marginStart="8dp"
                app:startIconDrawable="@drawable/ic_score"
                app:startIconTint="@color/colorPrimary"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edtText_gpa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/gpa"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear3"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_apart"
            app:startIconTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/address"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <fragment
            android:id="@+id/google_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_below="@id/address_textInput_layout"
            android:layout_marginVertical="16dp"
            tools:ignore="FragmentTagUsage" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/google_map"
            android:layout_marginHorizontal="16dp"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_custom"
            android:backgroundTint="@color/colorPrimary"/>
    </RelativeLayout>
</ScrollView>