<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/top_view"
            android:background="@drawable/iwave"/>

        <TextView
            android:id="@+id/text_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="24dp"
            android:text="@string/form_regis"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_form"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nama"
                android:ems="10"
                android:inputType="text"
                tools:ignore="Autofill"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_textInput_layout"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_textInput_layout"
            android:layout_marginHorizontal="24dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/colorPrimary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_regis"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_textInput_layout"
            android:layout_margin="16dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_custom"
            android:text="@string/register"/>
    </RelativeLayout>
</ScrollView>