<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_failed"
                android:textColor="@color/colorError"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/img_error"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_below="@id/text_failed"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_error"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_error"
                android:layout_marginHorizontal="16dp"
                android:text="@string/check"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_check"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/colorError"
                android:text="@string/ok" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>